# cs148b

./: .gitignore
.claude/: settings.local.json
hw1/: .gitignore  README.md  make_submission.sh  pyproject.toml
hw1/eecs148b_hw1/: __init__.py  attention.py  bpe_trainer.py  bpe_trainer_no_ll.py  create_tinystories_subset_tokens.py  embedding.py  ffn.py  generate_text_dump.py  hparam_search_lm.py  layernorm.py  linear.py  no_layernorm_transformer.py  no_positional_transformer.py  playground.ipynb  plot_pe_vs_nope_curve.py  prepare_tinystories_tokens.py  sinusoidal_positional_encoding.py  tokenizer.py  train_lm.py  train_tinystories_bpe.py  transformer.py
hw1/tests/: adapters.py  conftest.py  test_model.py  test_nn_utils.py
hw1/tests/_snapshots/: test_embedding.npz  test_ffn.npz  test_layernorm.npz  test_linear.npz  test_multihead_self_attention.npz  test_sinusoidal_pe.npz  test_transformer_block.npz  test_transformer_lm.npz  test_transformer_lm_truncated_input.npz
hw1/tests/unit_tests/: test_bpe_trainer.py
hw1/wandb/: latest-run
hw1/wandb/offline-run-20260416_153111-ttvd7v95/: run-ttvd7v95.wandb
hw1/wandb/run-20260414_210647-c3qlkbfa/: run-c3qlkbfa.wandb
hw1/wandb/run-20260414_213815-tni9kltw/: run-tni9kltw.wandb
hw1/wandb/run-20260415_133501-q45oelzj/: run-q45oelzj.wandb
hw1/wandb/run-20260415_133657-hpmtf9sm/: run-hpmtf9sm.wandb
hw1/wandb/run-20260415_133838-vbho9sd1/: run-vbho9sd1.wandb
hw1/wandb/run-20260415_134018-qmsinx5q/: run-qmsinx5q.wandb
hw1/wandb/run-20260415_134159-pbive09n/: run-pbive09n.wandb
hw1/wandb/run-20260415_134339-r56f39c6/: run-r56f39c6.wandb
hw1/wandb/run-20260415_134600-kro9a11o/: run-kro9a11o.wandb
hw2/: .gitignore  README.md  benchmark.py  colab_real.ipynb  colab_setup.ipynb  generate_deliverables.py  prepare_submission.sh  prompt.txt  pyproject.toml
hw2/.github/: copilot-instructions.md
hw2/alignment/: __init__.py  eval.py  grpo.py  prompts.py  rewards.py
hw2/basics/: pyproject.toml
hw2/nsys_local/: pyproject.toml
hw2/nsys_local/nsys_local/: __init__.py  cli.py
hw2/outputs/gsm8k_direct_baseline/: category_examples.json  summary.json
hw2/outputs/gsm8k_prompting_baselines/: cot_summary.json  self_consistency_k5_summary.json
hw2/scripts/: benchmarking_script.py
hw2/systems/: __init__.py  attention_benchmark.py  benchmark.py
hw2/tests/: adapters.py  conftest.py  test_alignment_utils.py  test_grpo.py
hw3/: .gitignore  CLAUDE.md  README.md  colab_setup.ipynb  pyproject.toml
hw3/basics/: __init__.py  lora.py  model.py  rope.py  text_encoder.py  vit.py
hw3/configs/: clip_eurosat.yaml  lora_resisc.yaml  vlm_clevr.yaml
hw3/data/: README.md
hw3/notebooks/: clip_pretrain.ipynb  eval_vlm.ipynb  finetune_resisc.ipynb  freeze_compare.ipynb  lora_rank_sweep.ipynb  mask_compare.ipynb  rope_2d.ipynb  rope_vs_learned.ipynb  train_vlm.ipynb
hw3/scripts/: download_clevr.py  eval_vlm.py  finetune_resisc.py  patch_size_benchmark.py  prepare_clevr_mini.py  pretrain_clip.py  train_vlm.py
hw3/tests/: adapters.py  test_clip.py  test_lora.py  test_rope.py  test_vit.py
hw3/vlm/: __init__.py  clip.py  data.py  eval.py  masking.py  model.py  projector.py
hw4/: README.md  environment.yml  pyproject.toml
hw4/configs/: rectflow_fashionmnist.yaml  vp_fashionmnist.yaml
hw4/data/: README.md
hw4/diffusion/: __init__.py  rectflow.py  unet.py  vp.py
hw4/scripts/: eval_kid.py  guided_diffusion_experiments.py  plot_coefficient.py  sample.py  train_rectflow.py  train_vp.py
hw4/tests/: adapters.py  test_rectflow.py  test_vp.py
(+67 files in other folders)
