[project]
name = "hw3"
version = "0.1.0"
description = "EE/CS 148B HW3 — Vision-Language Models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0,<2.11.0",
    "torchvision>=0.19.0,<0.26.0",
    "numpy>=1.26.0",
    "transformers>=4.45.0",
    "datasets>=2.20.0",
    "sentence-transformers>=3.0.0",
    "accelerate>=0.34.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "wandb>=0.18.0",
    "pyyaml>=6.0.0",
    "einops>=0.8.0",
    "nvidia-cusparselt-cu12>=0.7.1; platform_system != 'Darwin'",
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.6.0; platform_system != 'Darwin'",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["basics", "vlm"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E741"]
