[project]
name = "hw4"
version = "0.1.0"
description = "EE/CS 148B HW4 — Diffusion Models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0,<2.11.0",
    "torchvision>=0.19.0,<0.26.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "scipy>=1.12.0",
    "einops>=0.8.0",
    "pyyaml>=6.0.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
fidelity = [
    "torch-fidelity>=0.3.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E741"]
